# TPC-TP2

./: .gitignore  Cargo.toml  README.md
data/: abortadas.csv  abortadas.txt  data.csv
src/: lib.rs  main.rs  main_retry.rs
src/alglobo/: mod.rs  transaction.rs  transaction_code.rs  transaction_error.rs  transaction_manager.rs  transaction_message.rs  transaction_receiver.rs  transaction_state.rs  transactionable.rs  types.rs
src/candidates/: candidate.rs  constants.rs  election_code.rs  election_message.rs  leader.rs  mod.rs
src/clients/: airline_client.rs  bank_client.rs  client.rs  client_error.rs  client_name.rs  common_client.rs  hotel_client.rs  mod.rs  udp_client.rs
src/connections/: constants.rs  message_receiver.rs  mod.rs
src/file_reader/: file_iterator.rs  mod.rs  reader.rs
src/retry/: mod.rs  transaction_retrier.rs
src/services/: airline_client.rs  bank_client.rs  common_client.rs  common_service.rs  constants.rs  hotel.rs  hotel_client.rs  mod.rs  service_name.rs
src/services2/: hotel.rs
src/sockets/: constants.rs  mod.rs  socket_error.rs  udp_socket_receiver.rs  udp_socket_sender.rs  udp_socket_trait.rs  udp_socket_wrap.rs
src/transaction_messages/: mod.rs  transaction_code.rs  transaction_info.rs  transaction_log.rs  transaction_request.rs  transaction_response.rs  transaction_retry.rs  types.rs
src/transactions/: mod.rs  transaction_code.rs  transaction_info.rs  transaction_log.rs  transaction_request.rs  transaction_response.rs  types.rs
