[package]
name = "tp"
version = "0.1.0"
edition = "2018"
default-run = "alglobo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "alglobo"
path = "src/main.rs"

[[bin]]
name = "retry"
path = "src/main_retry.rs"

[dependencies]
rand = "0.8.4"

[dev-dependencies]
mockall = "0.10.2"
ntest = "0.7.3"

[target.'cfg(loom)'.dependencies]
loom = "0.5.2"